compiler/test/fail_compilation/e15876_4.d
/*
TEST_OUTPUT:
---
fail_compilation/e15876_4.d(25): Error: found `)` when expecting `(`
fail_compilation/e15876_4.d(26): Error: found `End of File` when expecting `(`
---
*/
#line 25
typeof){for
